
Release 0.1.0b1
* Added:
  -
* Fixed:
  - [Library] Check for endpoint name now works with IPv6 address (backported from 0.2.0a1)
* Changed:
  - [Library] [UI] Rework of program structure (backported from 0.2.0a1)
  - [Library] [UI] Move integrity checks from UI into Library (backported from 0.2.0a1)
* Known bugs and limitations:
  - Interface is not stable and can change drastically in future releases
  - [UI] Wrong version string displayed ("0.1.0a" instead of "0.1.0b")

Release 0.1.0b2
* Added:
  - [UI] Site properties can now be edited from within UI
  - [UI] Peer properties can now be edited from within UI
  - [UI] Add new option menu method
* Fixed:
  - [Library] Check for wrong default setting "editor" on Windows systems
* Changed:
  - [UI] Peer connections can now be edited from main menu instead of peer menu
  - [Library] [UI] Changed integrity checking system from error to message based
* Known bugs and limitations:
  - Interface is not stable and can change drastically in future releases
  - Program crashes with cryptic error message if there is an error in one of the JSON files
  - [UI] Wrong version string displayed ("0.1.0a" instead of "0.1.0b")

Release 0.1.0b3
* Added:
  -
* Fixed:
  - [UI] Version string is now displayed correctly ("0.1.0b" instead of "0.1.0a")
* Changed:
  - More readable error messages if there is an error in one of the JSON files
* Known bugs and limitations:
  - Interface is not stable and can change drastically in future releases

Release 0.1.0b4
* Added:
  - [UI] Add support for multiple languages (at the moment "en" and "de")
  - [UI] [Library] Add key_presence and key_datatype startup messages
  - [UI] During editing of site properties the connection table can now be changed
* Fixed:
  - [Library] Fix use of wrong encoding during file read
  - [UI] Menu navigation if no site/peer is created is now possible
* Changed:
  -
* Known bugs and limitations:
  - Interface is not stable and can change drastically in future releases