@@ -22,6 +22,11 @@
       "aaips_network_invalid": "{} ist kein gültiges IP-Netzwerk.",
       "aaips_ipv4_not_allowed": "{} ist IPv4, aber IPv4 ist deaktiviert.",
       "aaips_ipv6_not_allowed": "{} ist IPv6, aber IPv6 ist deaktiviert.",
+      "connection_table_dimension": "Reihe {}: In der Reihe sind {} Einträge, es werden aber {} Einträge erwartet. Benutze alte Daten für die Reihe.",
+      "connection_table_self_connection": "Reihe {}: Peer {} ist mit sich selbst verbunden. Setzte Wert in Spalte {} auf \"{}\".",
+      "connection_table_main_peer_missing": "Reihe {}: Peer {} hat keinen Main Peer. Der Main Peer muss ein ausgehender Peer sein. Setzte Wert in Spalte {} auf \"{}\".",
+      "connection_table_main_not_exist": "Reihe {}: Peer {} hat einen nicht existierenden Main Peer. Der Main Peer muss ein ausgehender Peer sein. Setzte Wert in Spalte {} auf \"{}\".",
+      "connection_table_main_peer_not_outgoing": "Reihe {}: Der Main Peer von Peer {} ist keine ausgehende Verbindung. Setzte Wert in Spalte {} auf \"{}\".",
       "dns_invalid": "{} ist keine gültige IP-Adresse",
       "dns_ip_version_wrong": "{} hat eine falsche IP-Adressversion",
       "endpoint_invalid": "{} ist keine gültige URL oder IP-Adresse",
@@ -82,8 +87,8 @@
       "new_peer_collect_infos": "Sammle Daten für Peer \"{}\".",
       "peer_header": "Peer {}",
       "peer_connections_collect_infos": "Bitte geben Sie noch fehlende Informationen für Peer \"{}\" ein.",
-      "peer_connections_edit": "Bitte editieren Sie die Verbindungs-Tabelle.",
-      "peer_connections_header": "Verbindungs-Tabelle bearbeiten",
+      "peer_connections_edit": "Bitte editieren Sie die Verbindungstabelle.",
+      "peer_connections_header": "Verbindungstabelle bearbeiten",
       "peer_connections_update_header": "Weitere Informationen für Peer \"{}\"",
       "port_enter": "Bitte geben Sie den Port für den Peer an: ",
       "port_header": "Port eingeben",
@@ -109,13 +114,13 @@
     },
     "site_actions": {
       "add_site_header": "Site hinzufügen",
-      "add_site_connection_table": "Bitte bearbeiten Sie die Verbindungs-Tabelle.",
+      "add_site_connection_table": "Bitte bearbeiten Sie die Verbindungstabelle.",
       "delete_header": "Site löschen",
       "delete_yes_no": "Möchten Sie die Site \"{}\" wirklich löschen?",
       "dns_enter": "Bitte geben Sie die DNS-Server ein (benutzen Sie ' ' für die Separation): ",
       "dns_header": "DNS Informationen",
       "dns_list": "Die folgenden DNS Einträge sind gültig:",
-      "edit_site_connection_table_yes_no": "Möchten Sie die Verbindungs-Tabelle bearbeiten?",
+      "edit_site_connection_table_yes_no": "Möchten Sie die Verbindungstabelle bearbeiten?",
       "edit_site_header": "Site bearbeiten",
       "edit_site_peer_properties_yes_no": "Möchten Sie die Peer-Eigenschaften bearbeiten?",
       "ip_networks_enter": "Bitte geben Sie das IPv{}-Netzwerk an, das von der Site genutzt werden soll. (Zum Beispiel \"{}\") ",
@@ -167,6 +172,12 @@
       "aaips_network_invalid": "{} is not a valid IP network.",
       "aaips_ipv4_not_allowed": "{} is IPv4, but IPv4 is not allowed.",
       "aaips_ipv6_not_allowed": "{} is IPv6, but IPv6 is not allowed.",
+      "connection_table_dimension": "Row {}: The row has {} entires but should have {} entires. Using old data for the row.",
+      "connection_table_self_connection": "Row {}: Peer\" {\"} is connected to itself. Setting value in column \"{}\" to \"{}\".",
+      "connection_table_main_peer_missing": "Row {}: Peer \"{}\" has no main peer, which should be an outgoing peer. Setting value in column {} to \"{}\".",
+      "connection_table_main_not_exist": "Row {}: Peer \"{}\" has non existant main peer. The main peer should be an existing outgoing peer. Setting value in column {} to \"{}\".",
+      "connection_table_main_peer_not_outgoing": "Row {}: The main peer from Peer \"{}\" is not an outgoing peer. Setting value in column {} to \"{}\".",
+      "connection_table_not_outgoing_is_main_peer": "Row {}: The main peer from Peer \"{}\" is not an outgoing peer. Setting value in column {} to \"{}\".",
       "dns_invalid": "{} is not a valid IP address",
       "dns_ip_version_wrong": "{} has a wrong IP address version",
       "endpoint_invalid": "{} is not a valid URL or IP address",
