@@ -107,6 +107,7 @@ Release 0.1.0b4
   - [UI] Add support for multiple languages (at the moment "en" and "de")
   - [UI] [Library] Add key_presence and key_datatype startup messages
   - [UI] During editing of site properties the connection table can now be changed
+  - [Library] ConnectionTable can handle more error situations and automatically correct them
 * Fixed:
   - [Library] Fix use of wrong encoding during file read
   - [UI] Menu navigation if no site/peer is created is now possible
